<resources>
    <!-- App -->
    <string name="app_name">Тёмная</string>

    <!-- Add Recognition Task -->
    <string name="addTask_loadImagesTitle">Загрузить картинки</string>
    <string name="addTask_inputList_hint">Введите вариант ответа</string>
    <string name="addTask_message_notEnoughDataProvided">Вы ввели не все данные</string>

    <!-- Solve Recognition Task -->
    <string name="solveTask_checkSolution">Проверить</string>
    <string name="solveTask_answer">Ваш ответ</string>
        <!-- Moderator actions -->
        <string name="solveTask_moderator_mark_reviewed">Одобрить</string>
        <string name="solveTask_moderator_delete">Удалить</string>
        <string name="solveTask_moderator_revoke_reviewed">Отозвать разрешение</string>

    <!-- Navigation -->
    <string name="nav_taskList_title">Задачи</string>
    <string name="nav_favoriteTaskList_title">Избранное</string>
    <string name="nav_articles_title">Стоит знать</string>
    <string name="nav_addTask_title">Добавление задачи</string>
    <string name="nav_solveTask_title">Что это?</string>
    <string name="nav_taskReview_title">Модерация</string>
    <string name="nav_home_title">Профиль</string>
    <string name="nav_settings_title">Настройки</string>

    <!-- Authorization -->
    <string name="auth_login_label">Вход</string>
    <string name="auth_signup_label">Регистрация</string>
    <string name="auth_isAccountNew">Ещё нет аккаунта</string>
    <string name="auth_loginHint">Логин</string>
    <string name="auth_passwordHint">Пароль</string>
    <string name="auth_passwordRepeatHint">Повторите пароль</string>
    <string name="auth_showPassword">Показать пароль</string>
    <string name="auth_login_button">Войти</string>
    <string name="auth_signup_button">Зарегистрироваться</string>
    <string name="auth_menu_signOut">Выйти из аккаунта</string>
        <!-- Messages -->
        <string name="auth_message_signup_incorrectCredentials">Данные не корректны или такой пользователь уже существует</string>
        <string name="auth_message_login_incorrectCredentials">Неверный логин или пароль</string>
        <string name="auth_message_hasEmptyFields">Не все данные введены</string>
        <string name="auth_message_passwordsNotMatch">Пароли не совпадают</string>

    <!-- Authorization handling -->
    <string name="handleAuth_pleaseWait">Идёт подключение…</string>
    <string name="handleAuth_message_ProfileNotFound">Не удалось получить данные профиля, попробуйте позже…</string>
    <string name="handleAuth_retry">Попробовать снова</string>

    <!-- Welcome -->
    <string name="welcome_welcome">Добро пожаловать, %s!</string>
    <string name="welcome_anonymousWelcome">Вы не авторизованы!</string>
    <string name="welcome_rating">Набрано очков</string>
    <string name="welcome_dailyArticle_title">Факт дня</string>
    <string name="welcome_role">Роль</string>
        <!-- Roles -->
        <string name="role_admin">Администратор</string>
        <string name="role_moderator">Модератор</string>
        <string name="role_user">Обычный пользователь</string>
        <string name="role_premium_user">Премиальный пользователь</string>
        <string name="role_consultor">Консультант</string>

    <!-- Articles -->
    <string name="articles_titleHint">Заголовок</string>
    <string name="articles_bodyHint">Описание</string>
    <string name="articles_bodyLength">%s/%s</string>
        <!-- Messages -->
        <string name="articles_message_saveError">Не удалось сохранить изменения</string>
        <string name="articles_message_tooShortTitle">Минимальная длинна заголовка: %s символов</string>
        <string name="articles_message_tooShortBody">Минимальная длинна описания: %s символов</string>

    <!-- Choose Locale Dialog -->
    <string name="dialogChooseLocale_title">Список языков</string>
    <string name="dialogChooseLocale_systemDefault">Системное значение</string>
    <string name="dialogChooseLocale_button_apply">Применить</string>
    <string name="dialogChooseLocale_button_cancel">Отмена</string>

    <!-- Settings -->
    <string name="settings_language_title">Язык интерфейса</string>
    <string name="settings_language_auto">Системное значение (%s)</string>
    <string name="settings_version_info" translatable="false">%s   |   %s</string>
    <string name="settings_useExternalSuggestions">Использовать онлайн-синонимайзер</string>
</resources>