<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="lab.maxb.dark.presentation.viewModel.AuthViewModel"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:animateLayoutChanges="true"
        tools:context=".presentation.view.AuthFragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/_32sdp"
            android:text="@{data.isAccountNew ? @string/auth_signup_label : @string/auth_login_label, default= @string/auth_login_label}"
            android:textSize="@dimen/h1" />
        <CheckBox
            android:id="@+id/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_checkbox"
            android:layout_marginHorizontal="@dimen/normalMargin"
            android:layout_marginVertical="@dimen/halfMargin"
            android:paddingHorizontal="@dimen/_4sdp"
            android:textSize="@dimen/normalText"
            android:checked="@={data.isAccountNew}"
            android:text="@string/auth_isAccountNew" />
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normalMargin"
            android:layout_marginVertical="@dimen/halfMargin"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:hint="@string/auth_loginHint"
            android:textSize="@dimen/normalText"
            android:inputType="textEmailAddress"
            android:text="@={data.login}" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normalMargin"
            android:layout_marginVertical="@dimen/halfMargin"
            android:hint="@string/auth_passwordHint"
            android:textSize="@dimen/normalText"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:text="@={data.password}" />
        <EditText
            android:id="@+id/password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normalMargin"
            android:layout_marginVertical="@dimen/halfMargin"
            android:hint="@string/auth_passwordRepeatHint"
            android:inputType="textPassword"
            android:textSize="@dimen/normalText"
            android:maxLines="1"
            android:visibility="gone"
            tools:visibility="visible"
            android:imeOptions="actionNext"
            android:text="@={data.passwordRepeat}" />
        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_checkbox"
            android:layout_marginHorizontal="@dimen/normalMargin"
            android:layout_marginVertical="@dimen/halfMargin"
            android:paddingHorizontal="@dimen/_4sdp"
            android:textSize="@dimen/normalText"
            android:checked="@={data.showPassword}"
            android:text="@string/auth_showPassword" />
        <Button
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normalMargin"
            android:layout_marginVertical="@dimen/halfMargin"
            android:enabled="@{!data.isLoading}"
            android:text="@{data.isAccountNew ? @string/auth_signup_button : @string/auth_login_button, default=@string/auth_login_button}"
            android:textSize="@dimen/normalText"
            app:cornerRadius="@dimen/_8sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>