<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="lab.maxb.dark.presentation.viewModel.SolveRecognitionTaskViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.AddRecognitionTaskFragment"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginVertical="@dimen/normalMargin"
             />

        <LinearLayout
            android:id="@+id/answer_layout"
            android:layout_below="@id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalText"
                android:text="@={data.answer}"
                android:inputType="textAutoCorrect|textAutoComplete"
                android:hint="@string/solveTask_answer"
                android:layout_marginHorizontal="@dimen/halfMargin" />

            <Button
                android:id="@+id/check_answer"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/halfMargin"
                android:textSize="@dimen/normalText"
                android:textAllCaps="false"
                android:text="@string/solveTask_checkSolution"
                app:cornerRadius="@dimen/_8sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/answer_layout"
            android:id="@+id/moderator_tools"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mark_reviewed_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/halfMargin"
                android:text="@string/solveTask_moderator_mark_reviewed"
                android:textColor="@color/black"
                android:textSize="@dimen/normalText"
                android:textAllCaps="false"
                android:backgroundTint="#736721"
                app:cornerRadius="@dimen/_8sdp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/halfMargin"
                android:text="@string/solveTask_moderator_delete"
                android:textSize="@dimen/normalText"
                android:textAllCaps="false"
                android:backgroundTint="#760A0A"
                app:cornerRadius="@dimen/_8sdp" />
        </LinearLayout>
    </RelativeLayout>
</layout>